--- a/index.html
+++ b/index.html
@@ -400,11 +400,13 @@
           </div>
           <div class="footer-social-box lastone">
             <p class="footer-social-link-title">Підпишіться на розсилку</p>
+            <form class="form-footer">
              <label class="form-line">
               <input type="email" name="email" placeholder="E-mail" class="form-input-footer"/>
               </label>
-              <div class="button-subscribe"><button class="button subscribe">Підписатися<svg class="subscribe-pic" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send"></use></svg></button></div>
+              <button class="button subscribe">Підписатися<svg class="subscribe-pic" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use></svg></button>
+              </form>
           </div>
         </div>
       </div>
@@ -417,14 +419,14 @@
         <form class="form">
           <label class="form-line">
             <span class="form-name">Ім'я</span>
-            <input type="text" name="username" placeholder=" " class="form-input" />
+            <input type="text" name="username"  class="form-input" />
             <span class="form-icon">
               <svg class="icon-contact-form" width="18" height="18">
               <use href="./images/icons.svg#icon-person-black-18dp-1"></use></svg>
             </span>
           </label>
           <label class="form-line">
-            <input type="tel" name="phone-number" placeholder=" " class="form-input"/>
+            <input type="tel" name="phone-number" class="form-input"/>
             <span class="form-name">Телефон</span>
             <span class="form-icon">
               <svg class="icon-contact-form" width="18" height="18">
@@ -432,7 +434,7 @@
             </span>
           </label>
           <label class="form-line">
-            <input type="email" name="email" placeholder=" " class="form-input"/>
+            <input type="email" name="email" class="form-input"/>
             <span class="form-name">Пошта</span>
             <span class="form-icon">
               <svg class="icon-contact-form" width="18" height="18">
@@ -441,7 +443,7 @@
           </label>
           <label class="form-line-comment"> 
             <span class="form-name">Коментар</span>
-            <textarea name="" id="" rows="7" class="form-input-comment" placeholder="Введіть текст"></textarea>
+            <textarea rows="7" class="form-input-comment" placeholder="Введіть текст"></textarea>
           </label>
            <label class="form-line-check">
   <input type="checkbox" class="checkbox">
@@ -453,8 +455,8 @@
   <span class="checkbox-text">Погоджуюся з розсилкою та приймаю <a href="" class="agree-link">Умови договору</a></span> 
 </label>
           <button class="button modal-form" type="submit">Відправити</button>
+          </form>
           </div>
-        </form>
         <button class="close-modal" data-modal-close>
           <svg width="11" height="11">
             <use href="./images/symbol-defs (3).svg#icon-vector"></use>
