--- a/portfolio.html
+++ b/portfolio.html
@@ -226,71 +226,72 @@
         </div>
       </section>
     </main>
-    <footer class="footer-bg">
-      <div class="container">
-        <div class="footer-links-box">
-          <div class="footer-links-thumb">
-            <a href="./index.html" class="logo-linkfirst">Web<span class="logo-linksecond-white">Studio</span></a>
-            <address>
-              <ul class="footer-links list">
-                <li class="footer-target-link">
-                  <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="footer-adress" target="_blank"
-                    rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li class="footer-target-link">
-                  <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
-                </li>
-                <li class="footer-target-link">
-                  <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
-                </li>
-              </ul>
-            </address>
-          </div>
-          <div class="footer-social-box">
-            <p class="footer-social-link-title">Приєднуйтесь</p>
-            <ul class="footer-social-list list">
-              <li>
-                <a href="" class="footer-socials-links">
-                  <svg class="social-icon-footer-white" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
+  <footer class="footer-bg">
+    <div class="container">
+      <div class="footer-links-box">
+        <div class="footer-links-thumb">
+          <a href="./index.html" class="logo-linkfirst">Web<span class="logo-linksecond-white">Studio</span></a>
+          <address>
+            <ul class="footer-links list">
+              <li class="footer-target-link">
+                <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="footer-adress" target="_blank"
+                  rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
               </li>
-              <li>
-                <a href="" class="footer-socials-links">
-                  <svg class="social-icon-footer-white" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
+              <li class="footer-target-link">
+                <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
               </li>
-              <li>
-                <a href="" class="footer-socials-links">
-                  <svg class="social-icon-footer-white" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="footer-socials-links">
-                  <svg class="social-icon-footer-white" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+              <li class="footer-target-link">
+                <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
               </li>
             </ul>
-          </div>
-          <div class="footer-social-box lastone">
-            <p class="footer-social-link-title">Підпишіться на розсилку</p>
+          </address>
+        </div>
+        <div class="footer-social-box">
+          <p class="footer-social-link-title">Приєднуйтесь</p>
+          <ul class="footer-social-list list">
+            <li>
+              <a href="" class="footer-socials-links">
+                <svg class="social-icon-footer-white" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-socials-links">
+                <svg class="social-icon-footer-white" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-socials-links">
+                <svg class="social-icon-footer-white" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-socials-links">
+                <svg class="social-icon-footer-white" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-social-box lastone">
+          <p class="footer-social-link-title">Підпишіться на розсилку</p>
+          <form class="form-footer">
             <label class="form-line">
               <input type="email" name="email" placeholder="E-mail" class="form-input-footer" />
             </label>
-            <div class="button-subscribe"><button class="button subscribe">Підписатися<svg class="subscribe-pic" width="24"
-                  height="24">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg></button></div>
-          </div>
+            <button class="button subscribe">Підписатися<svg class="subscribe-pic" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg></button>
+          </form>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
